# 2026-Epita-Intelligence-Symbolique

./: README.md
L1-sudoku-solvers/: .gitignore  README.md  pyproject.toml
L1-sudoku-solvers/data/: instances.json
L1-sudoku-solvers/slides/: presentation.html
L1-sudoku-solvers/src/sudoku/: __init__.py  benchmark.py  board.py  cli.py  generator.py  instrument.py  metrics.py  report.py
L1-sudoku-solvers/src/sudoku/solvers/: __init__.py  backtracking.py  base.py  cp_sat.py  dancing_links.py  genetic.py  sat.py
L1-sudoku-solvers/tests/: test_benchmark.py  test_board.py  test_solvers.py
L1-sudoku-solvers/ui/: app.py
L2-generation-niveaux/src/: tile.py
Lilou-Mayot-N5-Planification-oncologique-symbolique/: README.md  requirements.txt  smt_planning.py
Lilou-Mayot-N5-Planification-oncologique-symbolique/.ipynb_checkpoints/: oncology_planning-checkpoint.ipynb
Lilou-Mayot-N5-Planification-oncologique-symbolique/src/: validation.py
M8-Arthur-Amaury/: .gitignore  M8-Arthur-Amaury-soutenance.pptx  README.md  app.py  requirements.txt
M8-Arthur-Amaury/benchmarks/: minif2f_subset.json  minif2f_v2s.json  smoke.json
M8-Arthur-Amaury/m8_proof_agent/: __init__.py  benchmarks.py  graph.py  minif2f_v2.py  models.py  providers.py  (+2 more)
S4-Programmation-probabiliste-symbolique-pour-la-detection-de-regimes-de-marche/: .gitignore  README.md  requirements.txt
groupe-G3-GraphRAG-combine_Knowledge_Graphs_et_LLM_pour_le_RAG/: pyproject.toml
groupe-I1-Analyse-et-detection-de-sophismes-via-ia-symbolique/: .gitignore  README.md  app.py
groupe-O1-Raisonnement_spatial_qualitatif_par_les_calculs_RCC8/: pyproject.toml  requirements.txt
groupe-O1-Raisonnement_spatial_qualitatif_par_les_calculs_RCC8/notebook/: 02_composition_table.ipynb  03_constraint_propagation.ipynb  04_inconsistency_detection.ipynb  05_robot_planning.ipynb  06_scalability.ipynb
groupe-O1-Raisonnement_spatial_qualitatif_par_les_calculs_RCC8/rcc8/: __init__.py  composition_table.py  rcc8solver.py  relations.py  test.py
(+45 files in other folders)
