[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku-solvers"
version = "0.1.0"
description = "L1 — Résolution de Sudoku par multiples solveurs (backtracking, DLX, CP-SAT, SAT, génétique)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ortools>=9.7",
    "python-sat>=0.1.8.dev0",
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
ui = ["streamlit>=1.30", "altair>=5.0"]

[project.scripts]
sudoku-bench = "sudoku.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
